<resources>
    <string name="app_name">Smart Chef</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="user_email">john.doe@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="profile_label">Profile</string>
    <string name="user_name_ph">John Doe</string>
    <string name="recipe_detail_ph">Recipe Detail</string>
    <string name="choose_ingredients">Choose Ingredients</string>
    <string name="select_ingredients_title">Choose your favourite ingredients</string>
    <string name="next">next</string>
    <string name="search">Search</string>
    <string name="sugar_q">Sugar\n%1$d g</string>
    <string name="fat_q">Fat\n%1$d g</string>
    <string name="protein_q">Protein\n%1$d g</string>
    <string name="cal_q">Calories\n%1$d</string>
    <string name="ingredients">Ingredients</string>
    <string name="instructions">Instructions</string>
    <string name="search_error">Network unreachable!!, showing cached data</string>
    <string name="select_ingredients">Select Ingredients</string>
    <string name="select_tags">Select Tags</string>
    <string name="log_out">log out</string>
    <string name="select_profile">Profile</string>
    <string name="profile">Diet Profile</string>
    <string name="create_profile">Create New</string>
    <string name="edit_profile">Edit</string>
</resources>