<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="28sp"
            android:textStyle="bold"
            android:fontFamily="@font/montserrat"
            tools:text="Select Ingredients"
            android:textColor="@color/orange_800"
            android:layout_margin="16dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"/>

        <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/vp2"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintTop_toBottomOf="@id/title"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            tools:enabled="true"
            android:src="@drawable/ic_navigate_next_24"
            android:contentDescription="@string/next" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_gravity="start"
        android:layout_width="300dp"
        android:layout_height="match_parent"
        android:background="@color/cream_50">

        <TextView
            android:id="@+id/nav_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:fontFamily="@font/montserrat"
            android:text="@string/select_profile"
            android:textColor="@color/green_800"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/dropdown"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:hint="@string/profile"
            app:startIconTint="@color/green_500"
            app:boxStrokeColor="@color/green_800"
            app:boxStrokeErrorColor="@color/orange_800"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/nav_title"
            app:startIconDrawable="@drawable/ic_baseline_fastfood_24">

            <AutoCompleteTextView
                android:id="@+id/selector"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:inputType="none"
                android:textSize="16sp"
                tools:text="Happy"
                android:textColor="@color/green_500"/>

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/create_profile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/create_profile"
            android:textColor="@color/green_500"
            style="?android:attr/borderlessButtonStyle"
            app:layout_constraintTop_toBottomOf="@id/dropdown"
            app:layout_constraintLeft_toLeftOf="@id/dropdown"
            android:layout_marginTop="16dp"/>

        <Button
            android:id="@+id/edit_profile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/edit_profile"
            android:textColor="@color/green_500"
            style="?android:attr/borderlessButtonStyle"
            app:layout_constraintTop_toBottomOf="@id/create_profile"
            app:layout_constraintLeft_toLeftOf="@id/dropdown"
            android:layout_marginTop="16dp"/>

        <Button
            android:id="@+id/logout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/log_out"
            android:textColor="@color/orange_800"
            style="?android:attr/borderlessButtonStyle"
            app:layout_constraintTop_toBottomOf="@id/edit_profile"
            app:layout_constraintLeft_toLeftOf="@id/dropdown"
            android:layout_marginTop="16dp"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.drawerlayout.widget.DrawerLayout>